fix dark mode scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -90,11 +90,8 @@
 ::-webkit-scrollbar-track {
     background-color: hsla(0, 100%, 0%, 0.2);
 }
-
-@media (prefers-color-scheme: dark) {
-    ::-webkit-scrollbar-track {
-        background-color: hsla(0, 100%, 100%, 0.1);
-    }
+.dark ::-webkit-scrollbar-track {
+    background-color: hsla(0, 100%, 100%, 0.1);
 }
 
 ::-webkit-scrollbar-thumb {
